# mcp-gouv-fr

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.github/workflows/: lint.yml  pytest.yml
src/mcp_gouv_fr/: __init__.py  __main__.py  _logging.py  cli.py  config.py  http_lifespan.py  server.py
src/mcp_gouv_fr/apis/: __init__.py
src/mcp_gouv_fr/apis/datagouv/: __init__.py  config.py  http.py  models.py  server.py
src/mcp_gouv_fr/apis/datagouv/tests/: __init__.py  test_http.py  test_models.py
src/mcp_gouv_fr/apis/geo/: __init__.py  config.py  http.py  models.py  server.py
src/mcp_gouv_fr/apis/geo/tests/: __init__.py  test_http.py  test_models.py
src/mcp_gouv_fr/apis/insee/: __init__.py  config.py  http.py  models.py  server.py
src/mcp_gouv_fr/apis/insee/tests/: __init__.py  test_http.py  test_models.py
src/mcp_gouv_fr/apis/radiofrance/: __init__.py  config.py  http.py  models.py  server.py
src/mcp_gouv_fr/apis/radiofrance/tests/: __init__.py  test_http.py  test_models.py
src/mcp_gouv_fr/tests/: __init__.py  test_apis_registry.py  test_http_lifespan.py  test_server.py
